# rehashing

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RealData.cpp  SyntheticDensity.cpp  SyntheticDensity.h  SyntheticFixAcc.cpp  SyntheticFixAcc.h  library.cpp  library.h
alg/: AdaptiveEstimator.h  AdaptiveHBE.cpp  AdaptiveHBE.h  AdaptiveRS.cpp  AdaptiveRS.h  AdaptiveRSDiag.cpp  AdaptiveRSDiag.h  BaseLSH.cpp  BaseLSH.h  CMakeLists.txt  E2LSH.cpp  E2LSH.h  HashBucket.h  HashTable.h  Herding.h  HybridAdaptive.cpp  HybridAdaptive.h  KCenter.h  MRSketch.h  MoMEstimator.h  RS.cpp  RS.h  SketchLSH.cpp  SketchLSH.h  SketchTable.h  multiHBE.cpp  multiHBE.h  naiveKDE.cpp  naiveKDE.h
askit_release/rkdtsrc/: makefile.in  makefile.inc  sourceme
askit_release/treecode/: makeclean  sourceme.template
askit_release/treecode/deprecated/: CMakeLists.txt  askit_shared_main.cpp  buildme  buildme.maverick  buildme.stampede  chenhan_build_maverick  fileio.cpp  fileio.h  fileio.txx  generate_data.cpp  power_method.hpp  power_method_impl.hpp  test_distributed_main.cpp  test_fkstree.cpp  test_gaussian_kernel.cpp  test_id_main.cpp  test_laplace_kernel.cpp  test_let_treecode.cpp  test_polynomial_kernel.cpp
askit_release/treecode/deprecated/driver/: CMakeLists.txt  test_main.cpp  treecode_driver.cpp  treecode_driver.hpp  treecode_shared_main.cpp
askit_release/treecode/deprecated/fkstree/: CMakeLists.txt  fksTree.cpp  fksTree.h  fks_ompNode.cpp  fks_ompNode.h  test.cpp
askit_release/treecode/deprecated/id/: CMakeLists.txt  id.cpp  id.hpp  id_test_case.m  id_test_main.cpp  test_id.cpp  test_id.hpp
askit_release/treecode/deprecated/kernel/: CMakeLists.txt  gaussian_kernel.cpp  gaussian_kernel.hpp  test_gaussian_kernel.cpp
benchmark/: README.md
conf/: acoustic.cfg  aloi.cfg  census.cfg  cifar10.cfg  codrna.cfg  corel.cfg  covtype.cfg  elevator.cfg  gen10.cfg  gen100.cfg  gen15.cfg  gen20.cfg  gen3.cfg  gen30.cfg  gen5.cfg  gen50.cfg  gen8.cfg  glove.6b.100d.cfg  glove.6b.200d.cfg  glove.6b.300d.cfg  hep.cfg  higgs.cfg  home.cfg  housing.cfg  ijcnn.cfg  imagenet.cfg  mnist.cfg  mnist1.cfg  msd.cfg  poker.cfg  sensorless.cfg  shuttle.cfg  sift.cfg  skin.cfg  susy.cfg  svhn.cfg  test.cfg  timit.cfg  tmy.cfg
conf/archive/: cifar10.cfg  elevator.cfg  imagenet.cfg  sg_d20.cfg
conf/bw/: mnist-1.cfg  mnist-2.cfg  mnist2.cfg
data/: CMakeLists.txt  GenericInstance.cpp  GenericInstance.h  SyntheticData.cpp  SyntheticData.h
demo/: eLSH.py  kde_instance.py  rehashing.py
dfgt_serial/: CMakeLists.txt
dfgt_serial/core/: CMakeLists.txt
dfgt_serial/mlpack/: CMakeLists.txt
docs/: _adaptive_h_b_e_8h_source.html  _adaptive_r_s_8h_source.html  _h_b_s_8h_source.html  _hash_bucket_8h_source.html  _hash_table_8h_source.html  _herding_8h_source.html  _k_center_8h_source.html  _mo_m_estimator_8h_source.html  _sketch_table_8h_source.html  _uniform_h_b_e_8h_source.html  annotated.html  class_adaptive_estimator.html  class_adaptive_h_b_e-members.html  class_adaptive_h_b_e.html  class_adaptive_r_s-members.html  class_adaptive_r_s.html  class_adaptive_r_s_diag.html  class_h_b_s-members.html  class_h_b_s.html  class_hash_bucket.html  class_hash_table-members.html  class_hash_table.html  class_herding-members.html  class_herding.html  class_k_center.html  class_mo_m_estimator.html  class_r_s.html  class_sketch_h_b_e-members.html  class_sketch_h_b_e.html  class_sketch_table.html  class_uniform_h_b_e.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  naive_k_d_e_8h_source.html
docs/search/: all_1.js  all_10.js  all_3.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_4.js  functions_9.js  variables_2.js  variables_4.js  variables_6.js  variables_8.js  variables_a.js  variables_b.js
experiments/: AdaptiveBenchmark.cpp  AdaptiveEps.cpp  BatchBenchmark.cpp  BucketSweep.cpp  CacheMissTest.cpp  ComputeExact.cpp  ComputeExp.cpp  Diagnosis.cpp  DistributionSample.cpp  HBEBenchmark.cpp  NewDiag.cpp  RandomBenchmark.cpp  RealData.cpp  RealData.h  RealDataAdaptive.cpp  RealDataAdaptive.h  RealDataAll.cpp  RealDataAll.h  RealDataExhaustive.cpp  RealDataRandom.cpp  RunAdaptive.cpp  SketchBench.cpp  SyntheticDataGen.cpp  SyntheticDensity.cpp  SyntheticFindHBE.cpp  SyntheticFindRandom.cpp  SyntheticFindRandom.h  SyntheticFixAcc.cpp  SyntheticFixAcc.h
figtree/samples/: generic.cpp  generic_sweep.cpp  realdata.cpp  run_figtree.py
figtree/src/: figtree.cpp
hbe/: CMakeLists.txt  README.md
hbe/alg/: AdaptiveEstimator.h  AdaptiveHBE.cpp  AdaptiveHBE.h  AdaptiveRS.cpp  AdaptiveRS.h  AdaptiveRSDiag.cpp  AdaptiveRSDiag.h  BaseLSH.cpp  BaseLSH.h  CMakeLists.txt  HBS.h  HashBucket.h  HashTable.h  Herding.h  KCenter.h  MRSketch.h  MoMEstimator.h  RS.cpp  RS.h  SketchHBE.cpp  SketchHBE.h  SketchLSH.cpp  SketchLSH.h  SketchTable.h  UniformHBE.cpp  UniformHBE.h  naiveKDE.cpp  naiveKDE.h
hbe/conf/: README.md  covtype.cfg  shuttle.cfg
hbe/data/: GenericInstance.cpp  GenericInstance.h  SyntheticData.h
hbe/experiments/: ComputeExact.cpp  SketchBench.cpp  SyntheticDataGen.cpp  Visualization.cpp
kernel/: expkernel.h  kernel.h
notebooks/: Experiments.ipynb  batch_acoustic_exp  batch_codrna_exp  batch_codrna_exp_new  batch_corel_exp  batch_corel_exp_new  batch_covtype_all  batch_covtype_exp  batch_covtype_exp_new  batch_elevator_exp  batch_hep_exp  batch_higgs_exp  batch_home_exp  batch_home_exp_new  batch_housing_exp  batch_mnist_exp  batch_shuttle_exp  batch_sift_exp  batch_susy_exp  batch_tmy_exp  batch_tmy_exp_new  generic_samples_clean.txt  shuttle_time_beta_r4.txt  susy_time_beta.txt
other/: AdaptiveBenchmark.cpp  SyntheticBenchmark.cpp  SyntheticFindHBE.cpp  SyntheticFindRandom.cpp
python/: KDE.py  amr.py  eLSH.py  exp.ipynb  exponential.py  gaussian.py  mr_hbe.py
resources/: test.csv
utils/: CSVparser.h  bandwidth.h  dataUtils.h  expkernel.h  gaussiankernel.h  kernel.h  mathUtils.h  parseConfig.h  utils.cpp  utils.h
(+337 files in other folders)
