cmake_minimum_required(VERSION 3.5)
project(hbe)

set(CMAKE_CXX_STANDARD 14)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -fpic")

include_directories(utils)
include_directories(lib/config4cpp/include)
add_subdirectory(alg)
add_subdirectory(data)
link_directories(lib/config4cpp/lib)

#add_executable(hbe experiments/SyntheticDataGen.cpp)
add_executable(hbe experiments/SketchBench.cpp)
#add_executable(hbe experiments/BatchBenchmark.cpp)
#add_executable(hbe experiments/Diagnosis.cpp)
#add_executable(hbe experiments/ComputeExact.cpp)
#add_executable(hbe experiments/AdaptiveEps.cpp)
#add_executable(hbe experiments/RunAdaptive.cpp)
target_link_libraries(hbe alg data config4cpp)
